nesc-frontend/src/test/resources/lexer/invalidtokens/InvalidCharacter.nc
configuration InvalidCharacter {
} implementation {
    char invalid = 'a;
}